kubeflow/helm/pipelines/dryrun/cache/kubeflow-pipelines-cache-deployer_Deployment.yml
# Source: pipelines/templates/cache/deployer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-pipelines-cache-deployer
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipelines-cache-deployer
      app.kubernetes.io/name: pipelines-cache-deployer
      app.kubernetes.io/instance: kubeflow
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
        sidecar.istio.io/inject: "true"
      labels:
        app: pipelines-cache-deployer
        app.kubernetes.io/name: pipelines-cache-deployer
        app.kubernetes.io/instance: kubeflow
    spec:
      serviceAccountName: kubeflow-pipelines-cache-deployer
      securityContext: {}
      containers:
        - name: pipelines-cache-deployer
          securityContext: {}
          image: "gcr.io/ml-pipeline/cache-deployer:1.8.1"
          imagePullPolicy: IfNotPresent
          resources: {}
