kubeflow/helm/pipelines/dryrun/cache/kubeflow-pipelines-cache-server_Service.yml
# Source: pipelines/templates/cache/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeflow-pipelines-cache-server
  namespace: kubeflow
  labels:
    helm.sh/chart: pipelines-0.1.89
    app: pipelines
    app.kubernetes.io/name: pipelines
    app.kubernetes.io/instance: kubeflow
    app.kubernetes.io/version: "1.8.1"
    version: "1.8.1"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: webhook-api
      protocol: TCP
      name: http-webhook-api
  selector:
    app: pipelines-cache-server
    app.kubernetes.io/name: pipelines-cache-server
    app.kubernetes.io/instance: kubeflow
